--- a/client/index.html
+++ b/client/index.html
@@ -28,11 +28,10 @@
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
     </div>
-      <form>
-        <fieldset>
-          <input id="messageInput" type="text" value="Talk to me!" />
-        </fieldset>
-      </form>
+    <div id="input">
+      <input id="messageInput" type="text" value="Talk to me!" />
+      <button>Submit</button>
+    </div>
     <div id="chats"></div>
   </body>
 </html>
