implemented fetching messages!

--- a/client/index.html
+++ b/client/index.html
@@ -26,10 +26,14 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
+      <h3>Choose your room!</h3>
+      <select id="roomSelector">
+        <option>Room Name</option>
+      </select> 
       <!-- Your HTML goes here! -->
     </div>
     <div id="input">
-      <input id="messageInput" type="text" value="Talk to me!" />
+      <input id="messageInput" type="search" placeholder="Talk to me!" />
       <button>Submit</button>
     </div>
     <div id="chats"></div>
